--- a/Help/News.htm
+++ b/Help/News.htm
@@ -54,16 +54,22 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler 5 - version 0.0.1</h1>
+<h1>DScaler 5 - version 0.0.2</h1>
 
 <p>What's new:<br>
 <ul>
-<li>Everything!</li>
+<li>Nothing new</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>All of it</li>
+<li>Lots of bug fixes especially for sync and seek behaviour.</li>
+<li>Improved connection ability to allow ffdshow use.</li>
+</ul></p>
+
+<p>What's not working:
+<ul>
+<li>There are some strange issues with sync with spdif.</li>
 </ul></p>
 
 <p>What's Experimental:
