--- a/Help/News.htm
+++ b/Help/News.htm
@@ -54,7 +54,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler 5 - version 0.0.2</h1>
+<h1>DScaler 5 - version 0.0.3</h1>
 
 <p>What's new:<br>
 <ul>
@@ -63,8 +63,8 @@ height="2"></td>
 
 <p>What's Improved</p>
 <ul>
-<li>Lots of bug fixes especially for sync and seek behaviour.</li>
-<li>Improved connection ability to allow ffdshow use.</li>
+<li>Lots of bug fixes especially for reconnection.</li>
+<li>Improved ffdshow support.</li>
 </ul></p>
 
 <p>What's not working:
