--- a/Help/MpegAudio.htm
+++ b/Help/MpegAudio.htm
@@ -87,6 +87,11 @@ height="2"></td>
 					work with most sound cards at a sample rate of 48kHz and so is not suitable 
 					for use with MP3s taken from CDs.</td>
         </tr>
+        <tr> 
+          <td>SP/DIF Audio Time Offset</td>
+          <td>0</td>
+          <td>Allow correction of the delay on SP/DIF, negative values are allowed.</td>
+        </tr>
       </table>
 			</p>
       <!-- #EndEditable --> </td>
