--- a/Help/News.htm
+++ b/Help/News.htm
@@ -54,16 +54,18 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler 5 - version 0.0.6</h1>
+<h1>DScaler 5 - version 0.0.8</h1>
 
 <p>What's new:<br>
 <ul>
-<li>Preliminary support for NV12 for improved deinterlacing on Radeon cards.</li>
+<li>Nothing much.</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>Not a lot.</li>
+<li>Fix for clipping in DTS with stereo output.</li>
+<li>Fix for fading subtitles.</li>
+<li>Fix for threading issues with property page.</li>
 </ul></p>
 
 <p>What's not working:
