--- a/Help/Nav.htm
+++ b/Help/Nav.htm
@@ -16,7 +16,7 @@
 <a href="../index.php" target="_top" >Home</a> | 
 <a href="../dscaler4.htm" target="_top">TV viewer</a> | 
 <a href="../dscaler5.htm" target="_top">Media Decoders</a> |
-<a href="../oldsuiff.htm" target="_top">Old Stuff</a> | 
+<a href="../oldstuff.htm" target="_top">Old Stuff</a> | 
 <a href="../donate.htm" target="_top">Donate</a> | 
 <a href="../user_support.htm" target="_top">Support</a> | 
 <a href="../developers.htm" target="_top">Developers</a> | 
